# fast_ai

./: README.md
GPU_ARM/: Dockerfile  Dockerfile.armv7a  Dockerfile.runtime  Dockerfile.test  Dockerfile.x86  README.md  build.sh  export.sh
GPU_ARM/Patchs/: CMakeLists.txt  CMakeLists_tests.txt  TfParser.cpp
GPU_ARM/app/: Dockerfile  Stub_CMakeLists.txt
GPU_ARM/app/app/: CMakeLists.txt  app.cpp  app_facenet.cpp
GPU_ARM/export/: TfMobileNet-Armnn.cpp
ONNX/: README.md  freeze_graph.py  mxnet_facenet.py  remove_phase_train.py  test.py
benchmark/: Dockerfile  README.md  lapsrn.pb
classifier_improve/: README.md  setup.py
cudnn_darknet/: MUST_READ_COMPILE_STEP
fast_facenet/: Dockerfile  Dockerfile.x86  README.md
fast_facenet/acl_mxnet_deploy/: README.md
fast_facenet/deploy/: face_embedding.py  face_test.py  face_test_cpu.py  test1.py  test_detection.py  test_feature.py  test_gpu.py  test_mtcnn_cpu.py
fast_facenet/deploy_gpu/: convert.py  convert_network.py  face_model.py  load_mxnet_to_tvm.py  requirements.txt
fast_facenet/gpu_deploy/: convert_net_1.py  convert_net_2.py  convert_net_2_android_mali.py  convert_net_2_android_mali_4.py  convert_net_2_android_v7a.py  deploy.py  deploy.sh  deploy2.py  deploy2.sh  deploy2_android_mali.py  deploy2_android_mali.sh  deploy_android.py  model_compile.sh  model_compile2.sh  model_compile2_android_mali.sh  model_compile2_android_mali_4.sh  model_compile2_android_v7a.sh  runtime.sh  runtime2.sh  runtime_dist.sh  runtime_gpu.sh  test_dist.py
fast_facenet/test/: deploy.sh  runtime_gpu.sh  test_embedding.py
fast_facenet/webgl_deploy/: README.md  convert_net_2_webgl.py
fast_mtcnn/: .gitignore  Dockerfile  Dockerfile.armv7  Dockerfile.x86  README.md  build_face_detection_wheel.sh  build_face_detection_wheel_x86.sh  run.sh
fast_mtcnn/export/: build_in_docker.sh  face_detection-1.0.0-cp27-cp27mu-linux_aarch64.whl  face_detection-1.1.0-cp27-cp27mu-linux_aarch64.whl  (+3 more)
fast_mtcnn/mtcnn-gpu/: CMakeLists.txt
fast_mtcnn/mtcnn-gpu/mtcnn-gpu/src/: CMakeLists.txt
fast_mtcnn/mtcnn-gpu/mtcnn-gpu/src/libmtcnn/: mtcnn.cpp  mxnet_mtcnn.cpp  utils.cpp
fast_mtcnn/mtcnn-gpu/mtcnn-gpu/src/main/: test_camera.cpp  test_picture.cpp
fast_mtcnn/mtcnn-gpu/mtcnn-gpu/src/pybind/: CMakeLists.txt  main.cpp
fast_mtcnn/mtcnn-gpu/mtcnn-gpu/tests/: test.py
fast_mtcnn/mtcnn-gpu/src/: main.cpp
fast_mtcnn/mtcnn-gpu/src/libmtcnn/: CMakeLists.txt  comm_lib.cpp
fast_mtcnn/mtcnn-gpu/src/main/: CMakeLists.txt
fast_mtcnn/mtcnn-gpu/tests/: test.py
fast_mtcnn/mtcnn-ncnn/: setup.py  (+1 more)
fast_mtcnn/mtcnn-ncnn/mtcnn/: CMakeLists.txt  mtcnn-rest-server.cpp  mtcnn.cpp  mtcnn.h  py_face_detector.cpp  test.py
fast_od/: .gitignore  Dockerfile.x86  README.md  build_model.sh  convert_yolo.py  convert_yolo3.py  deploy.py  deploy.sh  deploy_od.py  from_darknet.py  from_darknet_v3.py  object_detection.py  run.sh  runtime_gpu.sh  test.py
fast_posenet/: CMakeLists.txt  Dockerfile  README.md  run.sh  runtime.sh  setup.py  test.py  test50.py
fast_posenet/pypose/: CMakeLists.txt  pypose.cpp  test.py
fast_posenet/pypose/model/: posenet_50.pb
fast_tensorflow/: Dockerfile  Dockerfile.aarch64  Dockerfile.aarch64_base  Dockerfile.final  Dockerfile.next  README.md  build_aarch64_saved.sh  build_on_x86.sh  export_whl.sh  final_build.sh  mali.icd  patch.sh  run.sh  sources.list
fpga/: README.md
human_body_model/: Readme
integration/: Dockerfile  Dockerfile.based_on_tf1.8  Dockerfile.build_runtime  README.md  build_runtime.sh  config.cmake
mxnet_build/: .gitignore  README.md  cross_build.sh  final_build.sh
ncnn/: Dockerfile  Dockerfile.x86  README.md  run_test.sh  ssdmobilenet.cpp
pose_net/: Dockerfile.onnx  Dockerfile.tf  Dockerfile.tf_gpu  build_tvm_onnx.sh  build_tvm_tf.sh  build_tvm_tf_gpu.sh  convert_net_1.py  convert_net_2.py  convert_net_3.py  model_compile1.sh  model_compile2.sh  model_compile3.sh  run1.sh  run1_gpu.sh  run3.sh  runtime1.sh  runtime2.sh  runtime3.sh  tensorflow.py
tvm/: Dockerfile  Dockerfile.aarch64  Dockerfile.bak  Dockerfile.gpu  Dockerfile.runtime_tvm  Dockerfile.x86  README.md  config.cmake  convert_1.py  convert_2.py  from_darknet.py  from_mxnet.py  load.py  rpc_server.sh  run.sh  test.py  test_runtime.py
yolo_parking/: convert_tvm_3288.py  convert_tvm_7420.py  from_dark.py
(+70 files in other folders)
